# Set source files
set(WWLIB_SRC
    _convert.cpp
    _mono.cpp
    argv.cpp
    b64pipe.cpp
    b64straw.cpp
    base64.cpp
    blit.cpp
    blowfish.cpp
    buff.cpp
    bufffile.cpp
    chunkio.cpp
    convert.cpp
    cpudetect.cpp
    crc.cpp
    cstraw.cpp
    data.cpp
    # ddraw.cpp
    dsurface.cpp
    Except.cpp
    FastAllocator.cpp
    ffactory.cpp
    gcd_lcm.cpp
    hash.cpp
    hsv.cpp
    ini.cpp
    int.cpp
    jshell.cpp
    keyboard.cpp
    LaunchWeb.cpp
    lcw.cpp
    load.cpp
    lzo.cpp
    lzo1x_c.cpp
    lzo1x_d.cpp
    md5.cpp
    mixfile.cpp
    mono.cpp
    mpmath.cpp
    mpu.cpp
    msgloop.cpp
    multilist.cpp
    mutex.cpp
    nstrdup.cpp
    palette.cpp
    pcx.cpp
    pipe.cpp
    pk.cpp
    ramfile.cpp
    random.cpp
    rawfile.cpp
    rc4.cpp
    rcfile.cpp
    readline.cpp
    realcrc.cpp
    refcount.cpp
    # regexpr.cpp // Needs gnu_regex?
    registry.cpp
    rgb.cpp
    rle.cpp
    rndstrng.cpp
    sampler.cpp
    sha.cpp
    slnode.cpp
    srandom.cpp
    stimer.cpp
    straw.cpp
    strtok_r.cpp
    systimer.cpp
    tagblock.cpp
    TARGA.CPP
    textfile.cpp
    thread.cpp
    trim.cpp
    vector.cpp
    verchk.cpp
    widestring.cpp
    win.cpp
    WWCOMUtil.cpp
    wwfile.cpp
    wwfont.cpp
    wwstring.cpp
    xpipe.cpp
    xstraw.cpp
    xsurface.cpp
    _mono.h
    always.h
    argv.h
    b64pipe.h
    b64straw.h
    base64.h
    binheap.h
    bittype.h
    blit.h
    blitter.h
    bool.h
    borlandc.h
    bound.h
    bsearch.h
    bsurface.h
    buff.h
    bufffile.h
    CallbackHook.h
    chunkio.h
    convert.h
    cpudetect.h
    crc.h
    cstraw.h
    data.h
    dsurface.h
    FastAllocator.h
    ffactory.h
    font.h
    gcd_lcm.h
    hash.h
    hashcalc.h
    hashlist.h
    hashtemplate.h
    iff.h
    index.h
    ini.h
    inisup.h
    int.h
    iostruct.h
    keyboard.h
    LaunchWeb.h
    lcw.h
    listnode.h
    lzo.h
    lzo1x.h
    lzo_conf.h
    lzoconf.h
    mempool.h
    mixfile.h
    mono.h
    monodrvr.h
    mpmath.h
    mpu.h
    msgloop.h
    multilist.h
    mutex.h
    Notify.h
    nstrdup.h
    ntree.h
    openw3d.h
    palette.h
    pcx.h
    pipe.h
    pk.h
    point.h
    ramfile.h
    random.h
    rawfile.h
    rc4.h
    rcfile.h
    readline.h
    realcrc.h
    ref_ptr.h
    refcount.h
    regexpr.h
    registry.h
    rgb.h
    rle.h
    rndstraw.h
    rndstrng.h
    rng.h
    rsacrypt.h
    sampler.h
    sha.h
    shapeset.h
    sharebuf.h
    Signaler.h
    simplevec.h
    slist.h
    slnode.h
    srandom.h
    stl.h
    straw.h
    strtok_r.h
    surface.h
    surfrect.h
    systimer.h
    tagblock.h
    TARGA.H
    textfile.h
    thread.h
    timer.h
    trackwin.h
    trect.h
    trim.h
    uarray.h
    vector.h
    verchk.h
    visualc.h
    watcom.h
    widestring.h
    win.h
    WWCOMUtil.h
    wwfile.h
    wwstring.h
    xmouse.h
    xpipe.h
    xstraw.h
    xsurface.h
)

# Targets to build.
add_library(wwlib STATIC)

target_link_libraries(wwlib PRIVATE
    wwcommon
)

target_sources(wwlib PRIVATE ${WWLIB_SRC})
