# Set source files
set(WWLIB_SRC
    argv.cpp
    b64pipe.cpp
    b64straw.cpp
    base64.cpp
    buff.cpp
    bufffile.cpp
    chunkio.cpp
    cpudetect.cpp
    crc.cpp
    cstraw.cpp
    Except.cpp
    FastAllocator.cpp
    ffactory.cpp
    gcd_lcm.cpp
    hash.cpp
    ini.cpp
    int.cpp
    jshell.cpp
    LaunchWeb.cpp
    lzo.cpp
    lzo1x_c.cpp
    lzo1x_d.cpp
    mixfile.cpp
    mpmath.cpp
    mpu.cpp
    msgloop.cpp
    multilist.cpp
    mutex.cpp
    nstrdup.cpp
    pipe.cpp
    pk.cpp
    ramfile.cpp
    random.cpp
    rawfile.cpp
    rcfile.cpp
    readline.cpp
    realcrc.cpp
    refcount.cpp
    registry.cpp
    rndstrng.cpp
    slnode.cpp
    straw.cpp
    systimer.cpp
    tagblock.cpp
    TARGA.CPP
    textfile.cpp
    thread.cpp
    trim.cpp
    vector.cpp
    verchk.cpp
    widestring.cpp
    win.cpp
    WWCOMUtil.cpp
    wwfile.cpp
    wwstring.cpp
    xpipe.cpp
    xstraw.cpp
    always.h
    argv.h
    b64pipe.h
    b64straw.h
    base64.h
    binheap.h
    bittype.h
    bound.h
    bsearch.h
    buff.h
    bufffile.h
    CallbackHook.h
    chunkio.h
    cpudetect.h
    crc.h
    cstraw.h
    FastAllocator.h
    ffactory.h
    font.h
    gcd_lcm.h
    hash.h
    hashcalc.h
    hashlist.h
    hashtemplate.h
    iff.h
    index.h
    ini.h
    inisup.h
    int.h
    iostruct.h
    LaunchWeb.h
    listnode.h
    lzo.h
    lzo1x.h
    lzo_conf.h
    lzoconf.h
    mempool.h
    mixfile.h
    mpmath.h
    mpu.h
    msgloop.h
    multilist.h
    mutex.h
    Notify.h
    nstrdup.h
    ntree.h
    openw3d.h
    pipe.h
    pk.h
    point.h
    ramfile.h
    random.h
    rawfile.h
    rcfile.h
    readline.h
    realcrc.h
    ref_ptr.h
    refcount.h
    registry.h
    rndstraw.h
    rndstrng.h
    rng.h
    sharebuf.h
    Signaler.h
    simplevec.h
    slist.h
    slnode.h
    straw.h
    systimer.h
    tagblock.h
    TARGA.H
    textfile.h
    thread.h
    timer.h
    trackwin.h
    trect.h
    trim.h
    uarray.h
    vector.h
    verchk.h
    widestring.h
    win.h
    WWCOMUtil.h
    wwfile.h
    wwstring.h
    xmouse.h
    xpipe.h
    xstraw.h
)

if(TARGET ffmpeg)
    list(APPEND WWLIB_SRC FFMpegFile.cpp FFMpegFile.h)
endif()

if(TARGET icu)
    list(APPEND WWLIB_SRC icu/unichar.h)
else()
    list(APPEND WWLIB_SRC wchar/unichar.h)
endif()

# Targets to build.
add_library(wwlib STATIC)

target_link_libraries(wwlib PRIVATE
    wwcommon
    version
)

target_sources(wwlib PRIVATE ${WWLIB_SRC})
