# Set source files
set(LEVELEDIT_SRC
    _assetmgr.cpp
    _wwaudio.cpp
    assetdatabase.cpp
    assetpackagemgr.cpp
    AttenuationSphere.cpp
    Box3D.cpp
    buildingchildnode.cpp
    BuildingNode.cpp
    CameraMgr.cpp
    CameraSettingsForm.cpp
    CheckingOutDialog.cpp
    CheckinStyleDialog.cpp
    ChooseModPackageDialog.cpp
    ColorBar.cpp
    ColorPicker.cpp
    ColorPickerDialogClass.cpp
    ColorUtils.cpp
    ConversationEditorMgr.cpp
    ConversationPage.cpp
    ConversationPickerDialog.cpp
    CoverAttackPointNode.cpp
    CoverSpotDefinition.cpp
    CoverSpotInfoPage.cpp
    CoverSpotNode.cpp
    DamageZoneNode.cpp
    DefinitionUtils.cpp
    DeviceSelectionDialog.cpp
    DialogToolbar.cpp
    DockableForm.cpp
    DummyObjectDefinition.cpp
    DummyObjectNode.cpp
    editableheightfield.cpp
    EditConversationDialog.cpp
    EditConversationListDialog.cpp
    EditConversationRemarkDialog.cpp
    EditDialogueDialog.cpp
    EditFilenameListDialog.cpp
    EditorAssetMgr.cpp
    EditorINI.cpp
    editormixfile.cpp
    editoronlydefinition.cpp
    editoronlyobjectnode.cpp
    EditorPhys.cpp
    EditorPropSheet.cpp
    EditorSaveLoad.cpp
    EditRemarkDialog.cpp
    EditScript.cpp
    EditStringDialog.cpp
    EditStringTwiddlerDialog.cpp
    excel.cpp
    excel8.cpp
    Export.cpp
    ExportPresetsDialog.cpp
    FileMgr.cpp
    FilePicker.cpp
    FormToolbar.cpp
    GenerateBaseDialog.cpp
    GenerateVisDialog.cpp
    GeneratingEdgeSampledVisDialog.cpp
    GeneratingLightVisDialog.cpp
    GeneratingManualVisDialog.cpp
    GeneratingPathfindDialog.cpp
    GeneratingVisDialog.cpp
    GenericTextDialog.cpp
    GotoGroupDialog.cpp
    GotoLocationDialog.cpp
    GotoObjectByIDDialog.cpp
    GotoObjectDialog.cpp
    GrabHandles.cpp
    GroupMgr.cpp
    heightfieldeditor.cpp
    HeightfieldMaterialSettingsDialog.cpp
    heightfieldmgr.cpp
    heightfieldpage.cpp
    HistogramCtl.cpp
    Icons.cpp
    ImportTranslationDialog.cpp
    IncludeFilesDialog.cpp
    InstancesPage.cpp
    LevelEdit.cpp
    LevelEditDoc.cpp
    LevelEditView.cpp
    LevelSettingsDialog.cpp
    LightAmbientForm.cpp
    LightDefinition.cpp
    LightNode.cpp
    LightSolveOptionsDialog.cpp
    LightSolveProgressDialog.cpp
    lightsolvesavesystem.cpp
    LODSettingsDialog.cpp
    MainDialogBar.cpp
    MainFrm.cpp
    MemLogDialog.cpp
    MissingTranslationReportDialog.cpp
    mixfiledatabase.cpp
    ModelUtils.cpp
    MouseMgr.cpp
    Mover.cpp
    MusicPropPage.cpp
    NewAssetPackageDialog.cpp
    NewHeightfieldDialog.cpp
    Node.cpp
    NodeIDStartDialog.cpp
    NodeInfoPage.cpp
    NodeMgr.cpp
    NodeScriptsPropPage.cpp
    ObjectNode.cpp
    OptimizingVisDialog.cpp
    OutputForm.cpp
    OverlapPage.cpp
    ParameterCtrls.cpp
    ParameterInheritanceDialog.cpp
    PathfindSectorBuilder.cpp
    PathfindStartDefinition.cpp
    PathfindStartNode.cpp
    PhysObjectEditDialog.cpp
    PhysObjEditTab.cpp
    Picker.cpp
    PlaySoundDialog.cpp
    PositionPage.cpp
    Preset.cpp
    PresetDependencyTab.cpp
    PresetDialogueTab.cpp
    PresetExport.cpp
    PresetGeneralTab.cpp
    PresetListDialog.cpp
    PresetLogger.cpp
    PresetMgr.cpp
    PresetPicker.cpp
    PresetPropSheet.cpp
    PresetRemapDialog.cpp
    PresetSettingsTab.cpp
    PresetsLibForm.cpp
    PresetTransitionTab.cpp
    PresetZoneTab.cpp
    ProfileSection.cpp
    ProgressUI.cpp
    rcstringextractor.cpp
    reportmgr.cpp
    SceneEditor.cpp
    ScriptEditDialog.cpp
    ScriptMgr.cpp
    SelectionBox.cpp
    SelectPresetDialog.cpp
    SkyPropPage.cpp
    SoundNode.cpp
    SoundSettingsPage.cpp
    SpawnerNode.cpp
    SpawnPointNode.cpp
    SpecSheet.cpp
    Splash.cpp
    SplashScreen.cpp
    StdAfx.cpp
    StringLibraryDialog.cpp
    StringPicker.cpp
    StringPickerDialog.cpp
    StringPickerMainDialog.cpp
    StringsCategoryNameDialog.cpp
    StringsCategoryViewDialog.cpp
    stringsmgr.cpp
    SunlightDialog.cpp
    TerrainDefinition.cpp
    TerrainLODPage.cpp
    TerrainNode.cpp
    TerrainSectionPersist.cpp
    test.cpp
    TGAToDXT.cpp
    TileDefinition.cpp
    TileNode.cpp
    TransitionEditDialog.cpp
    TransitionNode.cpp
    TranslationExportDialog.cpp
    UIThread.cpp
    UndoMgr.cpp
    UniqueList.cpp
    UpdateAssetsDialog.cpp
    UpdatePresetDialog.cpp
    UpdatingDBDialog.cpp
    Utils.cpp
    ValueListDialog.cpp
    Vector3Dialog.cpp
    VisErrorReportDialog.cpp
    VisLog.cpp
    VisMgr.cpp
    VisPointDefinition.cpp
    VisPointGenerator.cpp
    VisPointNode.cpp
    VisSectorSampler.cpp
    VisStatsDialog.cpp
    VisualOptionsDialog.cpp
    VisWindowDialog.cpp
    #VSSClass.cpp
    WaypathDefinition.cpp
    WaypathInfoPage.cpp
    WaypathNode.cpp
    WaypointNode.cpp
    WeatherPropPage.cpp
    WelcomeDialog.cpp
    ZoneEditDialog.cpp
    ZoneInfoPage.cpp
    ZoneNode.cpp
    _assetmgr.h
    _wwaudio.h
    assetdatabase.h
    assetpackagemgr.h
    AttenuationSphere.h
    Box3D.h
    buildingchildnode.h
    BuildingNode.h
    CameraMgr.h
    camerasettingsform.h
    CheckingOutDialog.h
    CheckinStyleDialog.h
    ChooseModPackageDialog.h
    CollisionGroups.h
    ColorBar.h
    ColorPicker.h
    ColorPickerDialogClass.h
    ColorUtils.h
    ConversationEditorMgr.h
    ConversationPage.h
    ConversationPickerDialog.h
    CoverAttackPointNode.h
    CoverSpotDefinition.h
    CoverSpotInfoPage.h
    CoverSpotNode.h
    DamageZoneNode.h
    DefinitionParameter.h
    DefinitionUtils.h
    DeviceSelectionDialog.h
    DialogToolbar.h
    DockableForm.h
    DummyObject.h
    DummyObjectDefinition.h
    DummyObjectNode.h
    editableheightfield.h
    EditConversationDialog.h
    EditConversationListDialog.h
    EditConversationRemarkDialog.h
    EditDialogueDialog.h
    EditFilenameListDialog.h
    EditorAssetMgr.h
    editorbuild.h
    EditorChunkIDs.h
    EditorINI.h
    EditorLine.h
    editormixfile.h
    editoronlydefinition.h
    editoronlyobjectnode.h
    EditorPhys.h
    EditorPropSheet.h
    EditorSaveLoad.h
    EditRemarkDialog.h
    EditScript.h
    EditStringDialog.h
    excel.h
    excel8.h
    Export.h
    ExportPresetsDialog.h
    FileLocations.h
    FileMgr.h
    FilePicker.h
    FormToolbar.h
    GenerateBaseDialog.h
    GenerateVisDialog.h
    GeneratingEdgeSampledVisDialog.h
    GeneratingLightVisDialog.h
    GeneratingManualVisDialog.h
    GeneratingPathfindDialog.h
    GeneratingVisDialog.h
    GenericTextDialog.h
    GotoGroupDialog.h
    GotoLocationDialog.h
    GotoObjectByIDDialog.h
    GotoObjectDialog.h
    GrabHandles.h
    Grid3D.h
    GroupMgr.h
    heightfieldeditor.h
    HeightfieldMaterialSettingsDialog.h
    heightfieldmgr.h
    heightfieldpage.h
    HistogramCtl.h
    HitTestInfo.h
    Icons.h
    ImportTranslationDialog.h
    IncludeFilesDialog.h
    INISections.h
    InstancesPage.h
    LevelEdit.h
    LevelEditDoc.h
    LevelEditView.h
    LevelFeature.h
    LevelSettingsDialog.h
    LightAmbientForm.h
    LightDefinition.h
    LightNode.h
    LightSolveOptionsDialog.h
    LightSolveProgressDialog.h
    lightsolvesavesystem.h
    ListTypes.h
    LODSettingsDialog.h
    MainDialogBar.h
    MainFrm.h
    MemLogDialog.h
    MissingTranslationReportDialog.h
    mixfiledatabase.h
    ModelUtils.h
    MouseMgr.h
    Mover.h
    MusicPropPage.h
    NewAssetPackageDialog.h
    NewHeightfieldDialog.h
    Node.h
    NodeCategories.h
    NodeFunction.h
    NodeIDStartDialog.h
    NodeInfoPage.h
    NodeScriptsPropPage.h
    nodetemplate.h
    NodeTypes.h
    ObjectNode.h
    OptimizingVisDialog.h
    OutputForm.h
    OverlapPage.h
    ParameterCtrls.h
    ParameterInheritanceDialog.h
    PathfindSectorBuilder.h
    PathfindStartDefinition.h
    PathfindStartNode.h
    PhysObjectEditDialog.h
    PhysObjEditTab.h
    Picker.h
    PlaySoundDialog.h
    PositionPage.h
    Preset.h
    PresetDependencyTab.h
    PresetDialogueTab.h
    PresetExport.h
    PresetGeneralTab.h
    PresetListDialog.h
    PresetLogger.h
    PresetMgr.h
    PresetPicker.h
    PresetPropSheet.h
    PresetRemapDialog.h
    PresetSettingsTab.h
    PresetsLibForm.h
    PresetTransitionTab.h
    PresetZoneTab.h
    ProfileSection.h
    ProgressUI.h
    rcstringextractor.h
    RegKeys.h
    reportmgr.h
    resource.h
    SceneEditor.h
    ScriptEditDialog.h
    ScriptMgr.h
    SelectionBox.h
    SelectPresetDialog.h
    SkyPropPage.h
    SoundNode.h
    SoundSettingsPage.h
    SpawnerNode.h
    SpawnPointNode.h
    SpecSheet.h
    Splash.h
    SplashScreen.h
    StdAfx.h
    StringLibraryDialog.h
    StringPicker.h
    StringPickerDialog.h
    StringPickerMainDialog.h
    StringsCategoryNameDialog.h
    StringsCategoryViewDialog.h
    stringsmgr.h
    SunlightDialog.h
    TerrainDefinition.h
    TerrainLODPage.h
    TerrainNode.h
    TerrainSectionPersist.h
    TGAToDXT.h
    TileDefinition.h
    TileNode.h
    TransitionEditDialog.h
    TransitionNode.h
    TranslationExportDialog.h
    UIThread.h
    UndoMgr.h
    UniqueList.h
    UpdateAssetsDialog.h
    UpdatePresetDialog.h
    UpdatingDBDialog.h
    Utils.h
    ValueListDialog.h
    Vector3Dialog.h
    VisErrorReportDialog.h
    VisGenProgress.h
    VisLog.h
    VisMgr.h
    VisPointDefinition.h
    VisPointGenerator.h
    VisPointNode.h
    VisSectorSampler.h
    VisStatsDialog.h
    VisualOptionsDialog.h
    VisWindowDialog.h
    #VSSClass.h
    WaypathDefinition.h
    WaypathInfoPage.h
    WaypathNode.h
    WaypointLine.h
    WaypointNode.h
    WeatherPropPage.h
    WelcomeDialog.h
    ZoneEditDialog.h
    ZoneInfoPage.h
    ZoneNode.h
    LevelEdit.rc
)

include(crunch)

# Targets to build.
add_executable(leveledit WIN32)

target_compile_definitions(leveledit PRIVATE
    _AFXDLL
    PARAM_EDITING_ON
)

target_include_directories(leveledit PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
)

target_link_libraries(leveledit PRIVATE
    crnlib
    winmm
    wsock32
    shlwapi
    version
    bandtest
    wwcommon
    wwdebuge
    wwlib
    wwbitpack
    scontrol
    wwutil
    wwmath
    wwnet
    wwonline
    wwsaveloade
    wwtranslatedb
    wwui
    wwaudioe
    ww3d2e
    binkmovie
    wwphyse
    combate
)

target_sources(leveledit PRIVATE ${LEVELEDIT_SRC})
